Refactoring of puzzle 5