@@ -1,20 +1,22 @@
 package net.bbelovic.adventofcode.day5;
 
-import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
+import org.junit.runners.Parameterized.Parameters;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
+
+import static org.junit.Assert.assertEquals;
 
 @RunWith(Parameterized.class)
-public class Day5Part2Test {
+public class Day5PuzzlePart2Test {
 
-    private String input;
-    private boolean expectedResult;
+    private final String input;
+    private final boolean expectedResult;
 
-    public Day5Part2Test(String input, boolean expectedResult) {
+    public Day5PuzzlePart2Test(String input, boolean expectedResult) {
         this.expectedResult = expectedResult;
         this.input = input;
     }
@@ -24,11 +26,11 @@ public class Day5Part2Test {
     should_tell_whether_input_string_is_nice() {
         Day5 day5 = new Day5();
         boolean actualResult = day5.isNiceStringPartTwo(input);
-        Assert.assertEquals(String.format("%s expected false but was true", input), expectedResult, actualResult);
+        assertEquals(String.format("%s expected false but was true", input), expectedResult, actualResult);
     }
-    @Parameterized.Parameters
+    @Parameters
     public static Collection<Object[]> testData() {
-        return Arrays.asList(new Object[][] {
+        return List.of(new Object[][] {
                 {"qjhvhtzxzqqjkmpb", true},
                 {"xxyxx", true},
                 {"uurcxstgmygtbstg", false},
